@@ -22,6 +22,7 @@
 #include "config.h"
 #include "Queue.hxx"
 #include "gidle.hxx"
+#include "TagMask.hxx"
 #include "event/FineTimerEvent.hxx"
 
 #ifdef ENABLE_ASYNC_CONNECT
@@ -29,11 +30,6 @@
 #endif
 
 #include <mpd/client.h> // IWYU pragma: export
-
-#if LIBMPDCLIENT_CHECK_VERSION(2,12,0)
-#define HAVE_TAG_WHITELIST
-#include "TagMask.hxx"
-#endif
 
 #include <string>
 
@@ -111,10 +107,8 @@ struct mpdclient final
 
 	enum mpd_state state = MPD_STATE_UNKNOWN;
 
-#ifdef HAVE_TAG_WHITELIST
 	bool enable_tag_whitelist = false;
 	TagMask tag_whitelist;
-#endif
 
 #if defined(ENABLE_ASYNC_CONNECT) && !defined(_WIN32)
 	bool connecting2;
@@ -179,9 +173,7 @@ struct mpdclient final
 	 */
 	std::string GetSettingsName() const;
 
-#ifdef HAVE_TAG_WHITELIST
 	void WhitelistTags(TagMask mask) noexcept;
-#endif
 
 	bool IsConnected() const {
 		return connection != nullptr;
